# transcriber

./: README.md  docker-compose.yml  nginx.conf  rabbitmq.conf
backend/: .dockerignore  .env.prod  .env.sample  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: admin.py  filters.py  models.py  serializers.py  tasks.py  views.py
backend/app/migrations/: 0001_initial.py  0002_auto_20231104_1813.py  0003_audio_language_audio_transcription_vector_and_more.py
backend/config/: asgi.py  celery.py  settings.py  wsgi.py
backend/transcriber/: celery.py  settings.py  urls.py
frontend/: .env.prod  Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  routes.tsx  types.d.ts  utils.ts
frontend/src/assets/: hover.module.css
frontend/src/components/: AudioCard.tsx  AudioFilters.tsx  MediaPlayer.tsx  ProjectCard.tsx  ProjectForm.tsx  SearchForm.tsx  SearchModal.tsx
frontend/src/pages/: AudioDetail.tsx  FolderDetail.tsx  Layout.tsx  Login.tsx  Projects.tsx  Search.tsx
frontend/src/services/: audioService.ts  auth.ts  folderService.ts  projectService.ts
