[tool.poetry]
name = "transcriber"
version = "0.1.0"
description = "Transcribe your audios and videos with this app"
authors = ["JuanQP <quinterosp.juan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
djangorestframework = "^3.14.0"
psycopg = {extras = ["binary"], version = "^3.1.12"}
django-environ = "^0.11.2"
django-filter = "^23.3"
celery = "^5.3.4"
faster-whisper = "^0.9.0"
djangorestframework-simplejwt = "^5.3.0"
django-cors-headers = "^4.3.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
